fix(server): restore runtime inbox path and update documentation